// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emitter component widths a CFrame narrows its position and leaves its rotation an f32 triple 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 18;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writei16(__surge_scratch, pos1, value.Position.X);
buffer.writei16(__surge_scratch, pos1 + 2, value.Position.Y);
buffer.writei16(__surge_scratch, pos1 + 4, value.Position.Z);
const [axis2, angle3] = value.ToAxisAngle();
const rv4 = axis2.mul(angle3);
buffer.writef32(__surge_scratch, pos1 + 6, rv4.X);
buffer.writef32(__surge_scratch, pos1 + 10, rv4.Y);
buffer.writef32(__surge_scratch, pos1 + 14, rv4.Z);

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 18;
const pos6 = new Vector3(buffer.readi16(__surge_input, pos5), buffer.readi16(__surge_input, pos5 + 2), buffer.readi16(__surge_input, pos5 + 4));
const rv7 = new Vector3(buffer.readf32(__surge_input, pos5 + 6), buffer.readf32(__surge_input, pos5 + 10), buffer.readf32(__surge_input, pos5 + 14));
const angle8 = rv7.Magnitude;
const rotation9 = CFrame.fromAxisAngle(angle8 > 1e-6 ? rv7.Unit : Vector3.zAxis, angle8);
return rotation9.add(pos6);"
`;

exports[`Emitter component widths a Vector3 writes each component at its own width, at cumulative offsets 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, value.X);
buffer.writeu16(__surge_scratch, pos1 + 1, value.Y & 65535);
buffer.writeu8(__surge_scratch, pos1 + 1 + 2, (value.Y >>> 16) & 255);
buffer.writef32(__surge_scratch, pos1 + 4, value.Z);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 8;
return new Vector3(buffer.readu8(__surge_input, pos2), buffer.readu16(__surge_input, pos2 + 1) + buffer.readu8(__surge_input, pos2 + 1 + 2) * 65536, buffer.readf32(__surge_input, pos2 + 4));"
`;

exports[`Emitter packed boolean padding packed booleans write one computed byte per group instead of per-bit packBit calls 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, (value.a ? 1 : 0) + (value.b ? 2 : 0) + (value.c ? 4 : 0));

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 1;
return {
    a: __surge_unpackBit(__surge_input, pos2, 0),
    b: __surge_unpackBit(__surge_input, pos2, 1),
    c: __surge_unpackBit(__surge_input, pos2, 2)
};"
`;

exports[`Emitter packed region a packed optional is a presence bit at the head of its object, with no flag byte 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, (value.count !== undefined ? 1 : 0) + (value.flag ? 2 : 0) + (value.maybeFlag !== undefined ? 4 : 0) + (value.maybeFlag === true ? 8 : 0));
const opt2 = value.count;
if (opt2 !== undefined) {
    const pos3 = __surge_cursor;
    __surge_cursor = pos3 + 1;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu8(__surge_scratch, pos3, opt2);
}
const s4 = value.label;
const pos5 = __surge_cursor;
__surge_cursor = pos5 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos5, s4.size());
const pos6 = __surge_cursor;
__surge_cursor = pos6 + s4.size();
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos6, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writestring(__surge_scratch, pos6, s4);

// read
const pos7 = __surge_readCursor;
__surge_readCursor = pos7 + 1;
let opt8;
if (__surge_unpackBit(__surge_input, pos7, 0)) {
    const pos9 = __surge_readCursor;
    __surge_readCursor = pos9 + 1;
    opt8 = buffer.readu8(__surge_input, pos9);
}
const pos10 = __surge_readCursor;
__surge_readCursor = pos10 + 4;
const len11 = buffer.readu32(__surge_input, pos10);
const pos12 = __surge_readCursor;
__surge_readCursor = pos12 + len11;
return {
    count: opt8,
    flag: __surge_unpackBit(__surge_input, pos7, 1),
    label: buffer.readstring(__surge_input, pos12, len11),
    maybeFlag: __surge_unpackBit(__surge_input, pos7, 2) ? __surge_unpackBit(__surge_input, pos7, 3) : undefined
};"
`;

exports[`Emitter packed tag bit a packed two-variant tagged union property is one tag bit, with no index byte 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, value.shape.kind === "b" ? 1 : 0);
const idx2 = value.shape.kind === "a" ? 0 : 1;
if (idx2 === 0) {
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 1;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu8(__surge_scratch, pos4, (value.shape as unknown as {
        n: number;
    }).n);
}
else if (idx2 === 1) {
    const pos3 = __surge_cursor;
    __surge_cursor = pos3 + 1;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu8(__surge_scratch, pos3, (value.shape as unknown as {
        n: number;
    }).n);
}

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 1;
const idx6 = __surge_unpackBit(__surge_input, pos5, 0) ? 1 : 0;
let result7: {
    kind: "a";
    n: number;
} | {
    kind: "b";
    n: number;
};
if (idx6 === 1) {
    const pos9 = __surge_readCursor;
    __surge_readCursor = pos9 + 1;
    result7 = {
        kind: "b",
        n: buffer.readu8(__surge_input, pos9)
    };
}
else {
    const pos8 = __surge_readCursor;
    __surge_readCursor = pos8 + 1;
    result7 = {
        kind: "a",
        n: buffer.readu8(__surge_input, pos8)
    };
}
return {
    shape: result7
};"
`;

exports[`Emitter per-kind write/read snapshots array 1`] = `
"// write
const arr1 = value;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos2, arr1.size());
for (const item3 of arr1) {
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos4, item3);
}

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 4;
const count6 = buffer.readu32(__surge_input, pos5);
const result7 = [];
for (const _i8 of $range(1, count6)) {
    const pos9 = __surge_readCursor;
    __surge_readCursor = pos9 + 8;
    result7.push(buffer.readf64(__surge_input, pos9));
}
return result7;"
`;

exports[`Emitter per-kind write/read snapshots blob 1`] = `
"// write
__surge_pushBlob(value as unknown as defined);

// read
const val1 = __surge_nextBlob();
return val1;"
`;

exports[`Emitter per-kind write/read snapshots bool 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, value ? 1 : 0);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 1;
return buffer.readu8(__surge_input, pos2) !== 0;"
`;

exports[`Emitter per-kind write/read snapshots buffer 1`] = `
"// write
const src1 = value;
const len2 = buffer.len(src1);
const pos3 = __surge_cursor;
__surge_cursor = pos3 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos3, len2);
const pos4 = __surge_cursor;
__surge_cursor = pos4 + len2;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.copy(__surge_scratch, pos4, src1, 0, len2);

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 4;
const len6 = buffer.readu32(__surge_input, pos5);
const pos7 = __surge_readCursor;
__surge_readCursor = pos7 + len6;
const bytes8 = buffer.create(len6);
buffer.copy(bytes8, 0, __surge_input, pos7, len6);
return bytes8;"
`;

exports[`Emitter per-kind write/read snapshots cframe 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 24;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.Position.X);
buffer.writef32(__surge_scratch, pos1 + 4, value.Position.Y);
buffer.writef32(__surge_scratch, pos1 + 8, value.Position.Z);
const [axis2, angle3] = value.ToAxisAngle();
const rv4 = axis2.mul(angle3);
buffer.writef32(__surge_scratch, pos1 + 12, rv4.X);
buffer.writef32(__surge_scratch, pos1 + 16, rv4.Y);
buffer.writef32(__surge_scratch, pos1 + 20, rv4.Z);

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 24;
const pos6 = new Vector3(buffer.readf32(__surge_input, pos5), buffer.readf32(__surge_input, pos5 + 4), buffer.readf32(__surge_input, pos5 + 8));
const rv7 = new Vector3(buffer.readf32(__surge_input, pos5 + 12), buffer.readf32(__surge_input, pos5 + 16), buffer.readf32(__surge_input, pos5 + 20));
const angle8 = rv7.Magnitude;
const rotation9 = CFrame.fromAxisAngle(angle8 > 1e-6 ? rv7.Unit : Vector3.zAxis, angle8);
return rotation9.add(pos6);"
`;

exports[`Emitter per-kind write/read snapshots cframe inside Packed 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 25;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
__surge_cursor = pos1 + __surge_writePackedCFrame(__surge_scratch, pos1, value);

// read
const [val2, size3] = __surge_readPackedCFrame(__surge_input, __surge_readCursor);
__surge_readCursor = __surge_readCursor + size3;
return val2;"
`;

exports[`Emitter per-kind write/read snapshots color3 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 3;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, math.floor(value.R * 255));
buffer.writeu8(__surge_scratch, pos1 + 1, math.floor(value.G * 255));
buffer.writeu8(__surge_scratch, pos1 + 2, math.floor(value.B * 255));

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 3;
return new Color3(buffer.readu8(__surge_input, pos2) / 255, buffer.readu8(__surge_input, pos2 + 1) / 255, buffer.readu8(__surge_input, pos2 + 2) / 255);"
`;

exports[`Emitter per-kind write/read snapshots colorSequence 1`] = `
"// write
const keypoints1 = value.Keypoints;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos2, keypoints1.size());
for (const kp3 of keypoints1) {
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef32(__surge_scratch, pos4, kp3.Time);
    const pos5 = __surge_cursor;
    __surge_cursor = pos5 + 3;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu8(__surge_scratch, pos5, math.floor(kp3.Value.R * 255));
    buffer.writeu8(__surge_scratch, pos5 + 1, math.floor(kp3.Value.G * 255));
    buffer.writeu8(__surge_scratch, pos5 + 2, math.floor(kp3.Value.B * 255));
}

// read
const pos6 = __surge_readCursor;
__surge_readCursor = pos6 + 1;
const count7 = buffer.readu8(__surge_input, pos6);
const keypoints8 = [];
for (const _i9 of $range(1, count7)) {
    const pos10 = __surge_readCursor;
    __surge_readCursor = pos10 + 4;
    const time11 = buffer.readf32(__surge_input, pos10);
    const pos12 = __surge_readCursor;
    __surge_readCursor = pos12 + 3;
    keypoints8.push(new ColorSequenceKeypoint(time11, new Color3(buffer.readu8(__surge_input, pos12) / 255, buffer.readu8(__surge_input, pos12 + 1) / 255, buffer.readu8(__surge_input, pos12 + 2) / 255)));
}
return new ColorSequence(keypoints8);"
`;

exports[`Emitter per-kind write/read snapshots datatype BrickColor 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 2;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu16(__surge_scratch, pos1, value.Number);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 2;
return new BrickColor(buffer.readu16(__surge_input, pos2));"
`;

exports[`Emitter per-kind write/read snapshots datatype DateTime 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef64(__surge_scratch, pos1, value.UnixTimestampMillis);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 8;
return DateTime.fromUnixTimestampMillis(buffer.readf64(__surge_input, pos2));"
`;

exports[`Emitter per-kind write/read snapshots datatype NumberRange 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.Min);
buffer.writef32(__surge_scratch, pos1 + 4, value.Max);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 8;
return new NumberRange(buffer.readf32(__surge_input, pos2), buffer.readf32(__surge_input, pos2 + 4));"
`;

exports[`Emitter per-kind write/read snapshots datatype Rect 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 16;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.Min.X);
buffer.writef32(__surge_scratch, pos1 + 4, value.Min.Y);
buffer.writef32(__surge_scratch, pos1 + 8, value.Max.X);
buffer.writef32(__surge_scratch, pos1 + 12, value.Max.Y);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 16;
return new Rect(buffer.readf32(__surge_input, pos2), buffer.readf32(__surge_input, pos2 + 4), buffer.readf32(__surge_input, pos2 + 8), buffer.readf32(__surge_input, pos2 + 12));"
`;

exports[`Emitter per-kind write/read snapshots datatype UDim 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.Scale);
buffer.writei32(__surge_scratch, pos1 + 4, value.Offset);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 8;
return new UDim(buffer.readf32(__surge_input, pos2), buffer.readi32(__surge_input, pos2 + 4));"
`;

exports[`Emitter per-kind write/read snapshots datatype UDim2 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 16;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.X.Scale);
buffer.writei32(__surge_scratch, pos1 + 4, value.X.Offset);
buffer.writef32(__surge_scratch, pos1 + 8, value.Y.Scale);
buffer.writei32(__surge_scratch, pos1 + 12, value.Y.Offset);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 16;
return new UDim2(buffer.readf32(__surge_input, pos2), buffer.readi32(__surge_input, pos2 + 4), buffer.readf32(__surge_input, pos2 + 8), buffer.readi32(__surge_input, pos2 + 12));"
`;

exports[`Emitter per-kind write/read snapshots datatype Vector3int16 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 6;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writei16(__surge_scratch, pos1, value.X);
buffer.writei16(__surge_scratch, pos1 + 2, value.Y);
buffer.writei16(__surge_scratch, pos1 + 4, value.Z);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 6;
return new Vector3int16(buffer.readi16(__surge_input, pos2), buffer.readi16(__surge_input, pos2 + 2), buffer.readi16(__surge_input, pos2 + 4));"
`;

exports[`Emitter per-kind write/read snapshots dict (map) 1`] = `
"// write
const dict1 = value;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
let count3 = 0;
for (const [k4, v8] of dict1 as unknown as Map<string, number>) {
    const s5 = k4;
    const pos6 = __surge_cursor;
    __surge_cursor = pos6 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos6, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu32(__surge_scratch, pos6, s5.size());
    const pos7 = __surge_cursor;
    __surge_cursor = pos7 + s5.size();
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos7, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writestring(__surge_scratch, pos7, s5);
    const pos9 = __surge_cursor;
    __surge_cursor = pos9 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos9, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos9, v8);
    count3++;
}
buffer.writeu32(__surge_scratch, pos2, count3);

// read
const pos10 = __surge_readCursor;
__surge_readCursor = pos10 + 4;
const count11 = buffer.readu32(__surge_input, pos10);
const result12: Record<string, number> = {};
for (const _i13 of $range(1, count11)) {
    const pos14 = __surge_readCursor;
    __surge_readCursor = pos14 + 4;
    const len15 = buffer.readu32(__surge_input, pos14);
    const pos16 = __surge_readCursor;
    __surge_readCursor = pos16 + len15;
    const pos17 = __surge_readCursor;
    __surge_readCursor = pos17 + 8;
    result12[buffer.readstring(__surge_input, pos16, len15)] = buffer.readf64(__surge_input, pos17);
}
return result12 as unknown as Map<string, number>;"
`;

exports[`Emitter per-kind write/read snapshots dict (set, no value) 1`] = `
"// write
const dict1 = value;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
let count3 = 0;
for (const k4 of dict1 as unknown as Set<string>) {
    const s5 = k4;
    const pos6 = __surge_cursor;
    __surge_cursor = pos6 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos6, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu32(__surge_scratch, pos6, s5.size());
    const pos7 = __surge_cursor;
    __surge_cursor = pos7 + s5.size();
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos7, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writestring(__surge_scratch, pos7, s5);
    count3++;
}
buffer.writeu32(__surge_scratch, pos2, count3);

// read
const pos8 = __surge_readCursor;
__surge_readCursor = pos8 + 4;
const count9 = buffer.readu32(__surge_input, pos8);
const result10: Record<string, boolean> = {};
for (const _i11 of $range(1, count9)) {
    const pos12 = __surge_readCursor;
    __surge_readCursor = pos12 + 4;
    const len13 = buffer.readu32(__surge_input, pos12);
    const pos14 = __surge_readCursor;
    __surge_readCursor = pos14 + len13;
    result10[buffer.readstring(__surge_input, pos14, len13)] = true;
}
return result10 as unknown as Set<string>;"
`;

exports[`Emitter per-kind write/read snapshots enum 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, surge_SortOrder_1_index.get(value.Name)!);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 1;
const idx3 = buffer.readu8(__surge_input, pos2);
return surge_SortOrder_1_items[idx3];

// helpers
const surge_SortOrder_1_items = [Enum.SortOrder.Custom, Enum.SortOrder.LayoutOrder, Enum.SortOrder.Name];
const surge_SortOrder_1_index = new Map([["Custom", 0], ["LayoutOrder", 1], ["Name", 2]]);"
`;

exports[`Emitter per-kind write/read snapshots guardedUnion 1`] = `
"// write
const idx1 = typeIs(value, "number") ? 0 : 1;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos2, idx1);
if (idx1 === 0) {
    const pos6 = __surge_cursor;
    __surge_cursor = pos6 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos6, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos6, value as unknown as number);
}
else if (idx1 === 1) {
    const s3 = value as unknown as string;
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu32(__surge_scratch, pos4, s3.size());
    const pos5 = __surge_cursor;
    __surge_cursor = pos5 + s3.size();
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writestring(__surge_scratch, pos5, s3);
}

// read
const pos7 = __surge_readCursor;
__surge_readCursor = pos7 + 1;
const idx8 = buffer.readu8(__surge_input, pos7);
let result9: number | string;
if (idx8 === 1) {
    const pos11 = __surge_readCursor;
    __surge_readCursor = pos11 + 4;
    const len12 = buffer.readu32(__surge_input, pos11);
    const pos13 = __surge_readCursor;
    __surge_readCursor = pos13 + len12;
    result9 = buffer.readstring(__surge_input, pos13, len12);
}
else {
    const pos10 = __surge_readCursor;
    __surge_readCursor = pos10 + 8;
    result9 = buffer.readf64(__surge_input, pos10);
}
return result9;"
`;

exports[`Emitter per-kind write/read snapshots literal 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, value === "a" ? 0 : value === "b" ? 1 : 2);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 1;
const idx3 = buffer.readu8(__surge_input, pos2);
return idx3 === 0 ? "a" : idx3 === 1 ? "b" : "c";"
`;

exports[`Emitter per-kind write/read snapshots literalConst 1`] = `
"// write


// read
return "fixed";"
`;

exports[`Emitter per-kind write/read snapshots num 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 4;
return buffer.readf32(__surge_input, pos2);"
`;

exports[`Emitter per-kind write/read snapshots num i24 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 3;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu16(__surge_scratch, pos1, value & 65535);
buffer.writeu8(__surge_scratch, pos1 + 2, (value >>> 16) & 255);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 3;
return ((buffer.readu16(__surge_input, pos2) + buffer.readu8(__surge_input, pos2 + 2) * 65536) ^ 8388608) - 8388608;"
`;

exports[`Emitter per-kind write/read snapshots num u24 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 3;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu16(__surge_scratch, pos1, value & 65535);
buffer.writeu8(__surge_scratch, pos1 + 2, (value >>> 16) & 255);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 3;
return buffer.readu16(__surge_input, pos2) + buffer.readu8(__surge_input, pos2 + 2) * 65536;"
`;

exports[`Emitter per-kind write/read snapshots numberSequence 1`] = `
"// write
const keypoints1 = value.Keypoints;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos2, keypoints1.size());
for (const kp3 of keypoints1) {
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef32(__surge_scratch, pos4, kp3.Time);
    const pos5 = __surge_cursor;
    __surge_cursor = pos5 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef32(__surge_scratch, pos5, kp3.Value);
    buffer.writef32(__surge_scratch, pos5 + 4, kp3.Envelope);
}

// read
const pos6 = __surge_readCursor;
__surge_readCursor = pos6 + 1;
const count7 = buffer.readu8(__surge_input, pos6);
const keypoints8 = [];
for (const _i9 of $range(1, count7)) {
    const pos10 = __surge_readCursor;
    __surge_readCursor = pos10 + 4;
    const time11 = buffer.readf32(__surge_input, pos10);
    const pos12 = __surge_readCursor;
    __surge_readCursor = pos12 + 8;
    keypoints8.push(new NumberSequenceKeypoint(time11, buffer.readf32(__surge_input, pos12), buffer.readf32(__surge_input, pos12 + 4)));
}
return new NumberSequence(keypoints8);"
`;

exports[`Emitter per-kind write/read snapshots object 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef64(__surge_scratch, pos1, value.a);
const s2 = value.b;
const pos3 = __surge_cursor;
__surge_cursor = pos3 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos3, s2.size());
const pos4 = __surge_cursor;
__surge_cursor = pos4 + s2.size();
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writestring(__surge_scratch, pos4, s2);

// read
const pos5 = __surge_readCursor;
__surge_readCursor = pos5 + 8;
const pos6 = __surge_readCursor;
__surge_readCursor = pos6 + 4;
const len7 = buffer.readu32(__surge_input, pos6);
const pos8 = __surge_readCursor;
__surge_readCursor = pos8 + len7;
return {
    a: buffer.readf64(__surge_input, pos5),
    b: buffer.readstring(__surge_input, pos8, len7)
};"
`;

exports[`Emitter per-kind write/read snapshots optional 1`] = `
"// write
const opt1 = value;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos2, opt1 !== undefined ? 1 : 0);
if (opt1 !== undefined) {
    const pos3 = __surge_cursor;
    __surge_cursor = pos3 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos3, opt1);
}

// read
const pos4 = __surge_readCursor;
__surge_readCursor = pos4 + 1;
const present5 = buffer.readu8(__surge_input, pos4) !== 0;
let opt6;
if (present5) {
    const pos7 = __surge_readCursor;
    __surge_readCursor = pos7 + 8;
    opt6 = buffer.readf64(__surge_input, pos7);
}
return opt6;"
`;

exports[`Emitter per-kind write/read snapshots recursiveRef 1`] = `
"// write
surge_Node_1_write(value);

// read
const val4 = surge_Node_1_read();
return val4;

// helpers
type surge_Node_1_Type = {
    value: number;
    next: surge_Node_1_Type;
};
function surge_Node_1_write(value: surge_Node_1_Type) {
    const pos1 = __surge_cursor;
    __surge_cursor = pos1 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos1, value.value);
    surge_Node_1_write(value.next);
}
function surge_Node_1_read(): surge_Node_1_Type {
    const pos2 = __surge_readCursor;
    __surge_readCursor = pos2 + 8;
    const val3 = surge_Node_1_read();
    return {
        value: buffer.readf64(__surge_input, pos2),
        next: val3
    };
}"
`;

exports[`Emitter per-kind write/read snapshots str 1`] = `
"// write
const s1 = value;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos2, s1.size());
const pos3 = __surge_cursor;
__surge_cursor = pos3 + s1.size();
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writestring(__surge_scratch, pos3, s1);

// read
const pos4 = __surge_readCursor;
__surge_readCursor = pos4 + 4;
const len5 = buffer.readu32(__surge_input, pos4);
const pos6 = __surge_readCursor;
__surge_readCursor = pos6 + len5;
return buffer.readstring(__surge_input, pos6, len5);"
`;

exports[`Emitter per-kind write/read snapshots taggedUnion 1`] = `
"// write
const idx1 = value.kind === "a" ? 0 : 1;
const pos2 = __surge_cursor;
__surge_cursor = pos2 + 1;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos2, idx1);
if (idx1 === 0) {
    const pos6 = __surge_cursor;
    __surge_cursor = pos6 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos6, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos6, (value as unknown as {
        x: number;
    }).x);
}
else if (idx1 === 1) {
    const s3 = (value as unknown as {
        y: string;
    }).y;
    const pos4 = __surge_cursor;
    __surge_cursor = pos4 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu32(__surge_scratch, pos4, s3.size());
    const pos5 = __surge_cursor;
    __surge_cursor = pos5 + s3.size();
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writestring(__surge_scratch, pos5, s3);
}

// read
const pos7 = __surge_readCursor;
__surge_readCursor = pos7 + 1;
const idx8 = buffer.readu8(__surge_input, pos7);
let result9: {
    kind: "a";
    x: number;
} | {
    kind: "b";
    y: string;
};
if (idx8 === 1) {
    const pos11 = __surge_readCursor;
    __surge_readCursor = pos11 + 4;
    const len12 = buffer.readu32(__surge_input, pos11);
    const pos13 = __surge_readCursor;
    __surge_readCursor = pos13 + len12;
    result9 = {
        kind: "b",
        y: buffer.readstring(__surge_input, pos13, len12)
    };
}
else {
    const pos10 = __surge_readCursor;
    __surge_readCursor = pos10 + 8;
    result9 = {
        kind: "a",
        x: buffer.readf64(__surge_input, pos10)
    };
}
return result9;"
`;

exports[`Emitter per-kind write/read snapshots tuple with a rest element 1`] = `
"// write
const tup1 = value;
const s2 = tup1[0];
const pos3 = __surge_cursor;
__surge_cursor = pos3 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos3, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos3, s2.size());
const pos4 = __surge_cursor;
__surge_cursor = pos4 + s2.size();
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writestring(__surge_scratch, pos4, s2);
const pos5 = __surge_cursor;
__surge_cursor = pos5 + 4;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos5, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu32(__surge_scratch, pos5, tup1.size() - 1);
for (let i6 = 1; i6 < tup1.size(); i6++) {
    const pos7 = __surge_cursor;
    __surge_cursor = pos7 + 8;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos7, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writef64(__surge_scratch, pos7, tup1[i6] as unknown as number);
}

// read
const tup8 = [];
const pos9 = __surge_readCursor;
__surge_readCursor = pos9 + 4;
const len10 = buffer.readu32(__surge_input, pos9);
const pos11 = __surge_readCursor;
__surge_readCursor = pos11 + len10;
tup8.push(buffer.readstring(__surge_input, pos11, len10));
const pos12 = __surge_readCursor;
__surge_readCursor = pos12 + 4;
const count13 = buffer.readu32(__surge_input, pos12);
for (const _i14 of $range(1, count13)) {
    const pos15 = __surge_readCursor;
    __surge_readCursor = pos15 + 8;
    tup8.push(buffer.readf64(__surge_input, pos15));
}
return tup8 as unknown as [
    string,
    ...number[]
];"
`;

exports[`Emitter per-kind write/read snapshots vector2 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.X);
buffer.writef32(__surge_scratch, pos1 + 4, value.Y);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 8;
return new Vector2(buffer.readf32(__surge_input, pos2), buffer.readf32(__surge_input, pos2 + 4));"
`;

exports[`Emitter per-kind write/read snapshots vector3 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 12;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef32(__surge_scratch, pos1, value.X);
buffer.writef32(__surge_scratch, pos1 + 4, value.Y);
buffer.writef32(__surge_scratch, pos1 + 8, value.Z);

// read
const pos2 = __surge_readCursor;
__surge_readCursor = pos2 + 12;
return new Vector3(buffer.readf32(__surge_input, pos2), buffer.readf32(__surge_input, pos2 + 4), buffer.readf32(__surge_input, pos2 + 8));"
`;

exports[`Emitter read-order for side-effecting fields a blob field followed by a plain field binds the blob read before the next statement 1`] = `
"// write
__surge_pushBlob(value.a as unknown as defined);
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef64(__surge_scratch, pos1, value.b);

// read
const val2 = __surge_nextBlob();
const pos3 = __surge_readCursor;
__surge_readCursor = pos3 + 8;
return {
    a: val2,
    b: buffer.readf64(__surge_input, pos3)
};"
`;

exports[`Emitter read-order for side-effecting fields a helper-object field followed by a plain field binds the helper call before the next statement 1`] = `
"// write
surge_Tree_1_write(value.inner);
const pos10 = __surge_cursor;
__surge_cursor = pos10 + 8;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos10, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writef64(__surge_scratch, pos10, value.zebra);

// read
const val11 = surge_Tree_1_read();
const pos12 = __surge_readCursor;
__surge_readCursor = pos12 + 8;
return {
    inner: val11,
    zebra: buffer.readf64(__surge_input, pos12)
};

// helpers
type surge_Tree_1_Type = {
    kids: number[];
};
function surge_Tree_1_write(value: surge_Tree_1_Type) {
    const arr1 = value.kids;
    const pos2 = __surge_cursor;
    __surge_cursor = pos2 + 4;
    if (__surge_cursor > __surge_capacity) {
        __surge_scratch = __surge_grow(__surge_scratch, pos2, __surge_cursor);
        __surge_capacity = buffer.len(__surge_scratch);
    }
    buffer.writeu32(__surge_scratch, pos2, arr1.size());
    for (const item3 of arr1) {
        const pos4 = __surge_cursor;
        __surge_cursor = pos4 + 8;
        if (__surge_cursor > __surge_capacity) {
            __surge_scratch = __surge_grow(__surge_scratch, pos4, __surge_cursor);
            __surge_capacity = buffer.len(__surge_scratch);
        }
        buffer.writef64(__surge_scratch, pos4, item3);
    }
}
function surge_Tree_1_read(): surge_Tree_1_Type {
    const pos5 = __surge_readCursor;
    __surge_readCursor = pos5 + 4;
    const count6 = buffer.readu32(__surge_input, pos5);
    const result7 = [];
    for (const _i8 of $range(1, count6)) {
        const pos9 = __surge_readCursor;
        __surge_readCursor = pos9 + 8;
        result7.push(buffer.readf64(__surge_input, pos9));
    }
    return {
        kids: result7
    };
}"
`;

exports[`Emitter shared reservations consecutive fixed-size fields share one alloc, at their own offsets 1`] = `
"// write
const pos1 = __surge_cursor;
__surge_cursor = pos1 + 17;
if (__surge_cursor > __surge_capacity) {
    __surge_scratch = __surge_grow(__surge_scratch, pos1, __surge_cursor);
    __surge_capacity = buffer.len(__surge_scratch);
}
buffer.writeu8(__surge_scratch, pos1, value.flag ? 1 : 0);
const pos2 = pos1 + 1;
buffer.writeu32(__surge_scratch, pos2, value.id);
const pos3 = pos1 + 5;
buffer.writef32(__surge_scratch, pos3, value.at.X);
buffer.writef32(__surge_scratch, pos3 + 4, value.at.Y);
buffer.writef32(__surge_scratch, pos3 + 8, value.at.Z);

// read
const pos4 = __surge_readCursor;
__surge_readCursor = pos4 + 17;
const pos5 = pos4 + 1;
const pos6 = pos4 + 5;
return {
    flag: buffer.readu8(__surge_input, pos4) !== 0,
    id: buffer.readu32(__surge_input, pos5),
    at: new Vector3(buffer.readf32(__surge_input, pos6), buffer.readf32(__surge_input, pos6 + 4), buffer.readf32(__surge_input, pos6 + 8))
};"
`;
